--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,10 @@
 language: go
 
 go:
-  - 1.0
   - 1.1
   - 1.2
   - 1.3
   - tip
+install:
+  - go get github.com/stretchr/testify/assert
+  - go get code.google.com/p/goauth2/oauth
