--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,4 @@ go:
   - tip
 install:
   - go get github.com/stretchr/testify/assert
-  - go get code.google.com/p/goauth2/oauth
+  - go get github.com/golang/oauth2
